--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/megi.png" alt="Megi's Profile Picture" height="200"></td>
+        <td><img src="megi.png" alt="Megi's Profile Picture" height="200"></td>
         <td><h1>Matthew Ehie'kowesho Gift Iganya</h1><p><em>Full Stack Developer and</em><strong> Data Scientist</strong></p></td>
       </tr>
     </table>
