made some corrections

--- a/contacts.html
+++ b/contacts.html
@@ -2,13 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <p>Addres: 5 Nasiru Street Onireke</p>
     <p>Tel: 09086846766</p>
     <p>Female</p>
-    <hr size="3" noshade>
+    <hr>
     <h1>Reach Me on </h1>
     <ul>
       <li><a href="https://www.facebook.com/profile.php?id=100008007678164">facebook</a></li>
