--- a/hobbies.html
+++ b/hobbies.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>My hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <hr>
     <h3>My Hobbies</h3>
+    <hr>
     <ol>
       <li>Swimming</li>
       <li>Cooking</li>
       <li>Reading</li>
-      <li>Learning</li>
+      <li>Volleying</li>
       <li>Googling</li>
     </ol>
 
