--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="./megi.png" alt="Megi's Profile Picture" height="200"></td>
+        <td><img src="Megi.png" alt="Megi's Profile Picture" height="200"></td>
         <td><h1>Matthew Ehik'owesho Gift Iganya</h1><p><em>Backend Software Developer and</em><strong> Data Scientist</strong></p></td>
       </tr>
     </table>
